@@ -27,22 +27,39 @@ On Ubuntu 18.04, you can install those dependencies like this:
 apt-get install maven openjdk-8-jdk python python3 docker.io docker-compose virtualenv make openvswitch-switch linux-generic-hwe-18.04 python3-setuptools python3-pip
 ```
 
-Note that your build user needs to be a member of the docker group for the build to work. Do that by adding the user to /etc/groups and logging out and back in again.
+#### Gradle
+You can either install Gradle, or use Gradle wrapper:
+ - Option 1 - Install Gradle (ensure that you have gradle 6.0 or later) - https://gradle.org/install/
 
+ - Option 2 - Use Gradle wrapper. The Kilda repository contains an instance of Gradle Wrapper 
+ which can be used straight from here without further installation.
+
+#### Docker
+Note that your build user needs to be a member of the docker group for the build to work. 
+Do that by adding the user to /etc/groups and logging out and back in again.
+
+#### Maven
 You also need to increase the maven RAM limit at least up to 1G.
 
 ```export MAVEN_OPTS="-Xmx1g -XX:MaxPermSize=128m"```
 
-Some build steps require Python2. If Python3 is default in your system please use `virtualenv`. Ensure that you have `tox` installed:
+#### Python
+Ensure that you have Python2 installed since some of build steps depends on it. 
+Possible option for that using virtual environment (`virtualenv`) with python interpreter version provided:
 
 ```
 virtualenv --python=python2 .venv
 . .venv/bin/activate
+```
+
+Ensure that you have `tox` installed:
+```
 pip install -U pip
 pip install tox
 ```
-
-Also, don't forget to install confd. This tool is used for creating config/properties files from templates. To install it execute the following command:
+#### Confd
+Also, don't forget to install confd. This tool is used for creating config/properties files from templates. 
+To install it execute the following command:
 
 ```
 wget https://github.com/kelseyhightower/confd/releases/download/v0.16.0/confd-0.16.0-linux-amd64 -O /usr/local/bin/confd
@@ -73,13 +90,11 @@ __NB: To run Kilda, you should have built it already (ie the previous section)._
 This is particularly important because docker-compose will expect some of the
 containers to already exist.
 
-From the base directory run these commands:
+From the base directory run the following command:
 
-1. ```docker-compose up```
-
-or
-
-1. ```make up-test-mode```
+```
+make up-test-mode
+```
 
 ### How to debug Kilda Controller components
 
@@ -91,14 +106,16 @@ with the switch, link, flow, feature, health-check controllers. The first thing 
 
 ```"-agentlib:jdwp=transport=dt_socket,address=50505,suspend=n,server=y"```
 
-to the ```CMD``` block in ```services/src/northbound/Dockerfile```, where ```50505``` is the port we’ll use for debugging.
+to the ```CMD``` block in ```docker/northbound/Dockerfile```, where ```50505``` is the port we’ll use for debugging.
 It can be any port, it’s up to us. The final file will be the following:
 
 ```
-FROM kilda/base-ubuntu
-ADD target/northbound.jar /app/
+ARG base_image=kilda/base-ubuntu
+FROM ${base_image}
+
+ADD BUILD/northbound/libs/northbound.jar /app/
 WORKDIR /app
-CMD ["java","-agentlib:jdwp=transport=dt_socket,address=50505,suspend=n,server=y","-jar","northbound.jar"]
+CMD ["java", "-XX:+PrintFlagsFinal", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-agentlib:jdwp=transport=dt_socket,address=50505,suspend=n,server=y", "-jar", "northbound.jar"]
 ```
 
 Since debugging is done over the network, that also means we need to expose that port in Docker. For that purpose we need
@@ -108,14 +125,15 @@ to add  ```"50505:50505"``` to the northbound ```ports``` block in ```docker-com
 northbound:
   container_name: openkilda-northbound
   build:
-    context: services/src/northbound/
+    context: docker
+    dockerfile: northbound/Dockerfile
   ports:
     - '8088:8080'
     - '50505:50505'
   ...
 ```
 
-After making those changes we need to configure remote debug in IntelliJ Idea: navigate to ```Edit Configurations -> Remote```
+After making those changes we need to configure remote debug in IntelliJ IDEA: navigate to ```Edit Configurations -> Remote```
 and set up the debug port as ```50505```. This completes the main part of the configuration.
 
 Next, we just run ```docker-compose up```. If everything above was done correctly you must see:
@@ -141,16 +159,17 @@ In some cases, we must have an approach for debugging a deploy process for a cou
 suppose both of them work under docker and some component doesn't belong to us and provided as a library. The typical case:
 WorkflowManager (further WFM) and Storm. The approach that is going to be used is almost the same as for northbound but there are
 nuances.
-First of all, we need to check which version of Storm is used in Open Kilda Controller. For that open ```services/storm/Dockerfile```
+First of all, we need to check which version of Storm is used in Open Kilda Controller. For that open ```docker/storm/Dockerfile```
 and find the version of Storm. In our case, the Storm version is ```1.1.0```. To be able to debug Storm we have to clone
 the sources from the GitHub repo ```https://github.com/apache/storm.git``` and switch to the release ```1.1.0```.
 ```git checkout -b 1.1.0 e40d213```. Information about releases can be found here ```https://github.com/apache/storm/releases/```
 
-Then go to ```services/wfm/Dockerfile``` and add ```ENV STORM_JAR_JVM_OPTS "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=50506"```
+Then go to ```docker/wfm/Dockerfile``` and add ```ENV STORM_JAR_JVM_OPTS "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=50506"```
 The final file should be as in example below:
 
 ```
-FROM kilda/storm:latest
+ARG base_image=kilda/storm:latest
+FROM ${base_image}
 
 ENV STORM_JAR_JVM_OPTS "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=50506"
 ...
@@ -163,17 +182,20 @@ And it only remains to add a port ```50506``` for the WFM contaner as in the exa
 wfm:
   container_name: wfm
   build:
-    context: services/wfm
+    context: docker
+    dockerfile: wfm/Dockerfile
   ...
   ports:
     - "50506:50506"
 ```
 
-Then we should configure remote debugging in IntelliJ Idea and the set up the debug port as ```50506```. After executing
+Then we should configure remote debugging in IntelliJ IDEA and the set up the debug port as ```50506```. After executing
 ```docker-compose up``` you should see the following log record ```Listening for transport dt_socket at address: 50506```
 in the WFM logs. As soon as you see it run the debugger - you'll able to debug both components: WFM and Storm.
 
-In order to debug a topology, for example, ```OfEventWfmTopology```, we should navigate to Maven Projects, Profiles and toggle ```local``` checkbox. Then open ```OfEventWfmTopology``` application debug configuration and add ```--local``` to Program arguments, execute ```docker-compose up``` and run in the debug mode ```OfEventWfmTopology```.
+In order to debug a topology, for example, ```NetworkTopology```: 
+create (or open if already exists) ```NetworkTopology.main``` application debug configuration and add ```--local``` to Program arguments, 
+execute ```docker-compose up``` and run in the debug mode ```NetworkTopology.main```.
 
 ### How to run tests
 Please refer to the [Testing](https://github.com/telstra/open-kilda/wiki/Testing)
@@ -183,27 +205,27 @@ section on our Wiki.
 
 Start with the following
 
-1. ```make unit```
+```
+make unit
+```
 
 From there, you can go to specific projects to build / develop / unit test.
-Just follow the _make unit_ trail.  Most projects have a maven target.
-
-__NB: Several projects have a dependency on the maven parent; look at make unit__
+Just follow the _make unit_ trail.  Most projects have a gradle ```build``` or maven ```target```.
 
 ### How to build / test key use cases
 
-Look in the `base/hacks/usecase` directory and you'll find several makefiles that will assist
+Look in the `docker/hacks/usecase` directory and you'll find several makefiles that will assist
 with the development and testing of that use case.
 
 As an example, you can execute the following command for more information on the __network
 discovery__ use case:
 
 ```
-make -f base/hacks/usecase/network.disco.make help
-
-# or
-
-cd base/hacks/usecase
+make -f docker/hacks/usecase/network.disco.make help
+```
+or
+```
+cd docker/hacks/usecase
 make -f network.disco.make help
 ```
 
@@ -245,7 +267,8 @@ make up-test-mode
 
 ### How to use confd for config/properties templating
 
-Pre-requirements: you need confd version v0.14.0+ for processing yams/json as backend. You can download it from [official confd site](https://github.com/kelseyhightower/confd/blob/master/docs/installation.md)
+Pre-requirements: you need confd version v0.14.0+ for processing yams/json as backend. 
+You can download it from [official confd site](https://github.com/kelseyhightower/confd/blob/master/docs/installation.md)
 
 We have confd for managing config/properties files from templates. Confd configs, templates and variable file stored in confd/ folder.
 `confd/conf.d/*.toml` - files with desctiption how to process templates (src. path, dst.path.... etc)
@@ -261,13 +284,14 @@ We have confd for managing config/properties files from templates. Confd configs
 5. run: `make update-props` for applying templates
 
 #### Common use cases
-An exmaplte, you already have neo4j server, and want to use it instead of dockerized neo4j. You can add neo4j endpoints to confd/vars/main.yaml and create properties template for services which use neo4j:
+An example, you already have neo4j server, and want to use it instead of dockerized neo4j. 
+You can add neo4j endpoints to confd/vars/main.yaml and create properties template for services which use neo4j:
 
-confd/conf.d/topology_engine.application.toml:
+confd/conf.d/base-storm-topology.topologies.toml:
 ```
 [template]
-src = "topology-engine/topology_engine.ini.tmpl"
-dest = "services/topology-engine/queue-engine/topology_engine.ini"
+src = "base-storm-topology/topology.properties.tmpl"
+dest = "src-java/base-topology/base-storm-topology/src/release/resources/topology.properties"
 keys = [ "/" ]
 mode = "0644"
 ```
@@ -279,32 +303,17 @@ kilda_neo4j_user: "neo4j"
 kilda_neo4j_password: "temppass"
 ```
 
-confd/templates/topology-engine/topology_engine.ini.tmpl
+confd/templates/base-storm-topology/topology.properties.tmpl
 ```
-[kafka]
-consumer.group={{ getv "/kilda_kafka_te_consumer_group" }}
-flow.topic={{ getv "/kilda_kafka_topic_flow" }}
-speaker.topic={{ getv "/kilda_kafka_topic_speaker" }}
-topo.eng.topic={{ getv "/kilda_kafka_topic_topo_eng" }}
-northbound.topic={{ getv "/kilda_kafka_topic_northbound" }}
-bootstrap.servers={{ getv "/kilda_kafka_hosts" }}
-environment.naming.prefix = {{ getv "/kilda_environment_naming_prefix" }}
-
-[gevent]
-worker.pool.size={{ getv "/kilda_worker_pool_size" }}
-
-[zookeeper]
-hosts={{ getv "/kilda_zookeeper_hosts" }}
-
-[neo4j]
-host={{ getv "/kilda_neo4j_host" }}
-user={{ getv "/kilda_neo4j_user" }}
-pass={{ getv "/kilda_neo4j_password" }}
-socket.timeout=30
+...
+neo4j.uri = bolt://{{ getv "/kilda_neo4j_host" }}:{{ getv "/kilda_neo4j_bolt_port" }}
+neo4j.user = {{ getv "/kilda_neo4j_user" }}
+neo4j.password = {{ getv "/kilda_neo4j_password" }}
+...
 ```
 
-In this example we will generate file services/topology-engine/queue-engine/topology_engine.properties
-from template confd/templates/topology-engine/topology_engine.ini.tmpl
+In this example we will generate file ```src-java/base-topology/base-storm-topology/src/release/resources/topology.properties```
+from template ```confd/templates/base-storm-topology/topology.properties.tmpl```
 
 ### How enable travis CI
 Someone with admin rights should log in using github account to https://travis-ci.org and on the page
